# build-sdl2

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  main.c
cmake/: sdl2-config.cmake
